# otterbridge

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  pyproject.toml  server.py  weir.example.toml
.github/workflows/: ci.yml
docs/: cli-integration-tests-plan.md  v0.2-plan.md  v0.3-plan.md  v0.4-plan.md  workflow-override-flags-plan.md
examples/: route_examplet.md
examples/providers/: claude-code.toml  gemini.toml  llamacpp.toml  ollama.toml  openrouter.toml
examples/use-cases/: free-cloud.toml  full-stack.toml  local-only.toml
legacy/: requirements.txt  server.py
legacy/examples/: orchestrator_example.md
src/: error.rs  main.rs
src/backends/: mod.rs  openai_compat.rs  stdio_cli.rs
src/cli/: backend.rs  mod.rs  serve.rs  status.rs  validate.rs  workflow.rs
src/config/: manager.rs  mod.rs  validate.rs
src/engine/: eval_loop.rs  fan_out.rs  fusion.rs  mod.rs  pipeline.rs  router.rs  test_support.rs
src/observability/: metrics.rs  mod.rs  persist.rs  tracing_setup.rs
src/resilience/: circuit_breaker.rs  mod.rs  rate_limit.rs  resilient_backend.rs  retry.rs
src/server/: mod.rs  tools.rs
src/services/: __init__.py  ollama.py
tests/: cli.rs
