[package]
name = "weir"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "weir — a single-binary MCP orchestration gateway for AI agents"
repository = "https://github.com/typangaa/otterbridge"
readme = "README.md"
keywords = ["mcp", "llm", "agent", "gateway", "orchestration"]
categories = ["command-line-utilities"]

[[bin]]
name = "weir"
path = "src/main.rs"

[dependencies]
# MCP protocol (official Rust SDK). Features finalized by the server module.
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "rustls-native-certs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
toml_edit = "0.25"
arc-swap = "1"
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
notify = "8"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
