[package]
name = "weir"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "weir — a single-binary CLI agent orchestrator that composes, routes and fans out local AI agent CLIs"
repository = "https://github.com/typangaa/otterbridge"
readme = "README.md"
keywords = ["llm", "agent", "orchestration", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "weir"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
toml_edit = "0.25"
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
